<resources>
    <string name="app_name">BookodemiaSael</string>
    <string name="tv_saludo_login">¡Bienvenido!</string>
    <string name="tiet_correo">Correo</string>
    <string name="tiet_password_login">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="tv_registro_login">¿Todavía no tienes cuenta? Registrate</string>
    <string name="tv_texto_registro">Estas a unos cuantos pasos de vivir la mejor experiencia</string>
    <string name="tv_regresar_registro"><![CDATA[< Regresar]]></string>
    <string name="tv_registro">Registra tu informacion</string>
    <string name="bt_registro">Crear cuenta</string>
    <string name="tiet_usuario">Usuario</string>
    <string name="tiet_registro_correo">Correo</string>
    <string name="tiet_registro_password">Contrasena</string>
    <string name="tiet_registro_password2">Confirmar contrasena</string>
    <string name="tv_regresar_home"><![CDATA[< Regresar]]></string>
    <string name="tv_saludo_home">Hola</string>
    <string name="tv_usuario_home">Sael117</string>
    <string name="tv_libros_home">Libros</string>
    <string name="tv_categorias_home">Categorias</string>
    <string name="tv_autores_home">Autores</string>
    <string name="tv_agregados_home">Recien Agregados</string>
    <string name="tv_populares_home">Mas Populares</string>
    <string name="tv_regresar_detalles"><![CDATA[< Regresar]]></string>
    <string name="tv_title_detalle">Title</string>
    <string name="tv_autor_detalles">by Autor</string>
    <string name="tv_categoria_detalles">Categoria</string>
    <string name="tv_descripcion_detalles">Descripcion</string>
    <string name="tv_detalles2">Detalles</string>
    <string name="tv_texto_detalles">Esta es una descripción, is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>
    <string name="tv_sobre_autor">Sobre el Autor</string>
    <string name="tv_nombre_autor">Nombre del Autor</string>
    <string name="tv_descripcion_autor">Esta es una descripción, is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>
    <string name="tv_cv_title">Titulo</string>
    <string name="tv_cv_autor">by Autor</string>
    <string name="tv_cv_categoria">Categoria</string>


    <!-- Metodos de API -->
    <string name="api_login">login</string>
    <string name="api_libros">books</string>
    <string name="api_libros_author_categories">books?include=authors,categories</string>
    <string name="api_logout">logout</string>
    <string name="api_registro">register</string>

    <!-- Shared Preferences -->
    <string name="name_file_preferemces">com.example.bookodemia.sharedpreferences</string>

    <!-- Keys de API-->
    <string name="key_token">plain-text-token</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- Strings item book -->
    <string name="tv_item_book_title">%s</string>
    <string name="Mockupchange">%s</string>
    <string name="Autorchange">%s</string>
    <string name="Categoriachange">%s</string>

    <!-- Errores -->
    <string name="error_internet">Ups! no estas conectado a internet</string>
    <string name="error_input_isempty">Campo vacio</string>
    <string name="error_email_noformat">Correo no valido</string>

    <string name="lorem_Ipsum">When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="lorem_Ipsum_Det">Estos son los detalles, ID del libro: %s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="lorem_Ipsum_Des">%s. Esta es una descripción, is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>


</resources>