<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_card_view"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:focusable="true"
    android:clickable="true"
    android:onClick="item_card">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardViewBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="65dp"
            android:layout_height="85dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="16dp"
            android:src="@drawable/libro_1"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/tv_cv_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_autor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_cv_autor"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <TextView
            android:id="@+id/text_categoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_cv_categoria"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toBottomOf="@+id/text_autor" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_right"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:backgroundTintMode="screen"
            app:layout_constraintEnd_toStartOf="@+id/imageButton4"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_share_bigger"
            app:tint="@color/blue_book"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton

            android:id="@+id/imageButton4"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTintMode="screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_favorite_bigger"
            app:tint="@color/blue_book"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>